<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/eight_dp"
    tools:context="com.so.chips.TimersActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_add_ten_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight_dp"
            android:layout_weight="1"
            android:foreground="@drawable/card_foreground"
            card_view:cardCornerRadius="@dimen/four_dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/twenty_dp"
                android:text="@string/add_ten_hour" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_add_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight_dp"
            android:layout_weight="1"
            android:foreground="@drawable/card_foreground"
            card_view:cardCornerRadius="@dimen/four_dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/twenty_dp"
                android:text="@string/add_hour" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_add_min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight_dp"
            android:layout_weight="1"
            android:foreground="@drawable/card_foreground"
            card_view:cardCornerRadius="@dimen/four_dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/twenty_dp"
                android:text="@string/add_min" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_remain_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight_dp"
            android:layout_weight="1"
            android:foreground="@drawable/card_foreground"
            card_view:cardCornerRadius="@dimen/four_dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/twenty_dp"
                android:text="@string/remain_hour" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_remain_min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight_dp"
            android:layout_weight="1"
            android:foreground="@drawable/card_foreground"
            card_view:cardCornerRadius="@dimen/four_dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/twenty_dp"
                android:text="@string/remain_min" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_start1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight_dp"
            android:layout_weight="1"
            android:foreground="@drawable/card_foreground"
            card_view:cardCornerRadius="@dimen/four_dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/twenty_dp"
                android:text="@string/start" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_stop1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight_dp"
            android:layout_weight="1"
            android:foreground="@drawable/card_foreground"
            card_view:cardCornerRadius="@dimen/four_dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/twenty_dp"
                android:text="@string/stop" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <Chronometer
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/sixteen_dp"
        android:format="%s"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/thirty_sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:layout_marginBottom="@dimen/sixteen_dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_start2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight_dp"
            android:layout_weight="1"
            android:foreground="@drawable/card_foreground"
            card_view:cardCornerRadius="@dimen/four_dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/twenty_dp"
                android:text="@string/start" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_stop2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight_dp"
            android:layout_weight="1"
            android:foreground="@drawable/card_foreground"
            card_view:cardCornerRadius="@dimen/four_dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/twenty_dp"
                android:text="@string/stop" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/sixteen_dp"
        android:text="@string/tmp_time"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/thirty_sp" />
</LinearLayout>
